--- a/style/css/style.css
+++ b/style/css/style.css
@@ -32,7 +32,7 @@
 
 .login__header {
   text-align: center;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .login__form {
@@ -82,5 +82,36 @@
 .login__submit:hover {
   color: white;
   background-color: #54bef3;
+}
+
+.login__fail {
+  color: red;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.panel {
+  background-color: #dddddd;
+  width: 100%;
+  height: 100vh;
+}
+
+.panel__header {
+  text-align: center;
+  height: 10vh;
+  background-color: #bfbfbf;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.panel__title {
+  color: #54bef3;
 }
 /*# sourceMappingURL=style.css.map */
