--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -15,7 +15,7 @@
   }
   &__header {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 10px;
   }
   &__form {
     display: flex;
@@ -50,5 +50,26 @@
       color: white;
       background-color: $second;
     }
+  }
+  &__fail {
+    color: red;
+    text-align: center;
+    margin-top: 30px;
+  }
+}
+.panel {
+  background-color: $primary;
+  width: 100%;
+  height: 100vh;
+  &__header {
+    text-align: center;
+    height: 10vh;
+    background-color: $third;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__title {
+    color: $second;
   }
 }
