--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -61,6 +61,7 @@
   background-color: $primary;
   width: 100%;
   height: 100vh;
+  position: relative;
   &__header {
     text-align: center;
     height: 10vh;
@@ -69,7 +70,12 @@
     justify-content: center;
     align-items: center;
   }
-  &__title {
+  &__link {
+    text-decoration: none;
     color: $second;
+  }
+  &__hello-user {
+    position: absolute;
+    right: 20px;
   }
 }
