--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -62,6 +62,26 @@
   width: 100%;
   height: 100vh;
   position: relative;
+  .hamburger {
+    position: absolute;
+    transform: translateY(-50%);
+    left: 5%;
+    top: 5%;
+    cursor: pointer;
+    .hamburger__span {
+      display: block;
+      width: 40px;
+      height: 7px;
+      background-color: white;
+      margin-bottom: 5px;
+      border-radius: 9px;
+      top: 20px;
+      cursor: pointer;
+      &--active {
+        background-color: $primary;
+      }
+    }
+  }
   &__header {
     text-align: center;
     height: 10vh;
@@ -70,12 +90,52 @@
     justify-content: center;
     align-items: center;
   }
-  &__link {
+  &__link-logo {
     text-decoration: none;
     color: $second;
   }
   &__hello-user {
     position: absolute;
     right: 20px;
+    color: $second;
+  }
+  &__fail {
+    color: red;
+    position: absolute;
+    top: 20%;
+  }
+  &__menu {
+    width: 30%;
+    height: 90%;
+    display: flex;
+    align-items: center;
+    background-color: $second;
+    justify-content: center;
+    position: absolute;
+    left: -30%;
+    transition: transform 0.3s;
+    &--active {
+      transform: translateX(100%);
+    }
+  }
+  &__links-container {
+    list-style: none;
+    margin-bottom: 100px;
+  }
+  &__link-container {
+    padding: 15px 0;
+  }
+  &__link {
+    text-decoration: none;
+    color: $primary;
+    font-size: 27px;
   }
 }
+// <aside class="panel__menu">
+//             <nav class="panel__nav">
+//                 <ul class="panel__links-container">
+//                     <li class="panel__link-container"><a class="panel__link" href="/?action=addClient">Dodaj Klienta</a>
+//                     </li>
+//                 </ul>
+//             </nav>
+//         </aside>
