--- a/style/css/style.css
+++ b/style/css/style.css
@@ -176,9 +176,11 @@ body {
   transition: -webkit-transform 0.3s;
   transition: transform 0.3s;
   transition: transform 0.3s, -webkit-transform 0.3s;
+  z-index: 1;
 }
 
 .panel__menu--active {
+  z-index: 1;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
 }
@@ -196,5 +198,132 @@ body {
   text-decoration: none;
   color: #dddddd;
   font-size: 27px;
+}
+
+.form__client {
+  z-index: -1;
+  width: 50%;
+  border: 2px solid #54bef3;
+  -webkit-transform: translate(50%, 10%);
+          transform: translate(50%, 10%);
+  height: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: white;
+}
+
+.form__title {
+  margin-top: 10%;
+  color: #54bef3;
+}
+
+.form__wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 50px 0;
+}
+
+.form__label {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  padding: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 20px;
+  color: #54bef3;
+}
+
+.form__input {
+  font-size: 20px;
+  margin: 0 10px;
+  padding: 10px;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #dddddd;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  max-width: 220px;
+}
+
+.form__input:focus {
+  border-bottom: 2px solid #54bef3;
+}
+
+.form__submit {
+  font-size: 15px;
+  padding: 8px 15px;
+  background-color: white;
+  border: 2px solid #dddddd;
+  cursor: pointer;
+  color: #54bef3;
+  margin-top: 10px;
+  outline: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.form__submit:hover {
+  border: 2px solid #54bef3;
+}
+
+.client__wrapper {
+  width: 90%;
+  background-color: yellow;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  padding: 30px;
+}
+
+.client__section {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+  height: 200px;
+  border: 2px solid #54bef3;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: black;
+}
+
+.client__title {
+  margin-top: 10px;
 }
 /*# sourceMappingURL=style.css.map */
