Dividing the style to

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -94,6 +94,34 @@ body {
   margin-top: 30px;
 }
 
+.details {
+  width: 80%;
+  background-color: white;
+  height: 30%;
+  border: 2px solid #54bef3;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.details__title {
+  text-align: center;
+  font-size: 30px;
+  margin-top: 10px;
+  color: #54bef3;
+}
+
+.details__flat {
+  color: #54bef3;
+  text-align: center;
+  margin-top: 7px;
+}
+
+.details__price {
+  color: green;
+  text-align: center;
+  margin-top: 7px;
+}
+
 .panel {
   background-color: #dddddd;
   width: 100%;
@@ -293,15 +321,19 @@ body {
 
 .client__wrapper {
   width: 90%;
-  background-color: yellow;
+  height: auto;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  padding: 30px;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
+  margin-top: 20px;
 }
 
 .client__section {
@@ -309,7 +341,7 @@ body {
       flex-basis: 30%;
   height: 200px;
   border: 2px solid #54bef3;
-  background-color: white;
+  background-color: transparent;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -321,9 +353,42 @@ body {
       -ms-flex-align: center;
           align-items: center;
   color: black;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+  background-color: white;
+  margin: 10px;
+}
+
+.client__section:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  z-index: 1;
 }
 
 .client__title {
   margin-top: 10px;
+}
+
+.client__description {
+  margin-top: 20px;
+}
+
+.client__details {
+  text-decoration: none;
+  color: #54bef3;
+  border: 2px solid #54bef3;
+  padding: 8px 15px;
+  margin-top: 20px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.client__details:hover {
+  background-color: #54bef3;
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
