--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -1,240 +1,8 @@
 @import "variable";
 @import "reset";
 @import "base";
-
-.login {
-  &__wrapper {
-    color: $second;
-    width: 50%;
-    height: 35vh;
-    border: 2px solid $primary;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    transform: translate(50%, 50%);
-  }
-  &__header {
-    text-align: center;
-    margin-top: 10px;
-  }
-  &__form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 30px;
-  }
-  &__label {
-    display: flex;
-    padding: 15px;
-    font-size: 20px;
-  }
-  &__input {
-    margin-left: 10px;
-    padding: 5px 10px;
-    font-size: 18px;
-    border: none;
-    border-bottom: 2px solid $primary;
-    outline: none;
-    &:focus {
-      border-bottom: 2px solid $second;
-    }
-  }
-  &__submit {
-    padding: 5px 12px;
-    color: $second;
-    font-size: 15px;
-    background-color: white;
-    border: 2px solid $second;
-    cursor: pointer;
-    &:hover {
-      color: white;
-      background-color: $second;
-    }
-  }
-  &__fail {
-    color: red;
-    text-align: center;
-    margin-top: 30px;
-  }
-}
-.panel {
-  background-color: $primary;
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  .hamburger {
-    position: absolute;
-    transform: translateY(-50%);
-    left: 5%;
-    top: 5%;
-
-    cursor: pointer;
-    .hamburger__span {
-      display: block;
-      width: 40px;
-      height: 7px;
-      background-color: white;
-      margin-bottom: 5px;
-      border-radius: 9px;
-      top: 20px;
-      cursor: pointer;
-      &--active {
-        background-color: $primary;
-      }
-    }
-  }
-  &__header {
-    text-align: center;
-    height: 10vh;
-    background-color: $third;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  &__link-logo {
-    text-decoration: none;
-    color: $second;
-  }
-  &__hello-user {
-    position: absolute;
-    right: 20px;
-    color: $second;
-  }
-  &__fail {
-    color: red;
-    position: absolute;
-    top: 20%;
-  }
-  &__menu {
-    width: 30%;
-    height: 90%;
-    display: flex;
-    align-items: center;
-    background-color: $second;
-    justify-content: center;
-    position: absolute;
-    left: -30%;
-    transition: transform 0.3s;
-    z-index: 1;
-    &--active {
-      z-index: 1;
-      transform: translateX(100%);
-    }
-  }
-  &__links-container {
-    list-style: none;
-    margin-bottom: 100px;
-  }
-  &__link-container {
-    padding: 15px 0;
-  }
-  &__link {
-    text-decoration: none;
-    color: $primary;
-    font-size: 27px;
-  }
-}
-.form {
-  &__client {
-    z-index: -1;
-    width: 50%;
-    border: 2px solid $second;
-    transform: translate(50%, 10%);
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-  }
-  &__title {
-    margin-top: 10%;
-    color: $second;
-  }
-  &__wrapper {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-
-    justify-content: center;
-    padding: 50px 0;
-  }
-
-  &__label {
-    flex-basis: 100%;
-    padding: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    color: $second;
-  }
-  &__input {
-    font-size: 20px;
-    margin: 0 10px;
-    padding: 10px;
-    outline: none;
-    border: none;
-    border-bottom: 2px solid $primary;
-    transition: 0.3s;
-    flex-grow: 1;
-    max-width: 220px;
-    &:focus {
-      border-bottom: 2px solid $second;
-    }
-  }
-  &__submit {
-    font-size: 15px;
-    padding: 8px 15px;
-    background-color: white;
-    border: 2px solid $primary;
-    cursor: pointer;
-    color: $second;
-    margin-top: 10px;
-    outline: none;
-    transition: 0.3s;
-    &:hover {
-      border: 2px solid $second;
-    }
-  }
-}
-.client {
-  &__wrapper {
-    width: 90%;
-    background-color: yellow;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-evenly;
-    padding: 30px;
-  }
-  &__section {
-    flex-basis: 30%;
-    height: 200px;
-    border: 2px solid $second;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: black;
-  }
-  &__title {
-    margin-top: 10px;
-  }
-}
-// <div class="client__wrapper">
-//     <?php
-// if (isset($_SESSION['acces']) && $_SESSION['acces'] === 1):?>
-//     <?php foreach ($data as $key => $value):?>
-//     <section class="client__section">
-//         <h1 class="client__title"><?php echo $value[1]?>
-//         </h1>
-//         <p class="client__description"><?php echo $value[2]?>
-//         </p>
-//         <p class="client__price"><?php echo $value[3]?>
-//         </p>
-//     </section>
-//     <?php endforeach;?>
-
-//     <?php else:?>
-//     <h1 class="panel__fail">Brak autoryzacji</h1>
-//     <?php endif;?>
-// </div>
+@import "login";
+@import "details";
+@import "panel";
+@import "form";
+@import "client";
