--- a/style/sass/_client.scss
+++ b/style/sass/_client.scss
@@ -1,49 +1,50 @@
-.client {
-  &__wrapper {
-    width: 90%;
-    height: auto;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: space-between;
-    margin-top: 20px;
-  }
-  &__section {
-    flex-basis: 30%;
-    height: 200px;
-    border: 2px solid $second;
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: black;
-    transform: scale(1);
-    transition: transform 0.3s;
-    background-color: white;
-    margin: 10px;
+@mixin button {
+  text-decoration: none;
+  color: $second;
+  font-size: 14px;
+  padding: 7px 14px;
+  border: 2px solid $primary;
+  font-weight: bold;
 
-    &:hover {
-      transform: scale(1.2);
-      z-index: 1;
-    }
-  }
-  &__title {
-    margin-top: 10px;
-  }
-  &__description {
-    margin-top: 20px;
-  }
-  &__details {
-    text-decoration: none;
-    color: $second;
+  transition: 0.3s;
+  &:hover {
     border: 2px solid $second;
-    padding: 8px 15px;
+  }
+}
+.client {
+  width: 80%;
+  background-color: white;
+  height: 20%;
+  border: 2px solid $second;
+  margin: 0 auto;
+  margin-top: 20px;
+  position: relative;
+  &__title {
+    text-align: center;
+    font-size: 30px;
+    margin-top: 10px;
+    color: $second;
+  }
+  &__address {
+    color: $second;
+    margin-top: 10px;
+    text-align: center;
+  }
+  &__address-wrapper {
+    position: absolute;
+    right: 15px;
+    bottom: 20px;
+  }
+  &__delete {
+    @include button();
+  }
+  &__edit {
+    @include button();
+  }
+  &__info {
+    width: 100%;
     margin-top: 20px;
-    transition: 0.3s;
-    &:hover {
-      background-color: $second;
-      color: white;
-    }
+    color: red;
+    text-align: center;
   }
 }
