--- a/style/sass/_form.scss
+++ b/style/sass/_form.scss
@@ -1,4 +1,6 @@
 .form {
+  display: flex;
+  justify-content: center;
   &__client {
     z-index: -1;
     width: 50%;
@@ -9,25 +11,30 @@
     flex-direction: column;
     align-items: center;
     background-color: white;
+    @media screen and (min-width: 1040px) {
+      width: 40%;
+      transform: translate(75%, 5%);
+    }
   }
   &__title {
     margin-top: 5%;
     color: $second;
   }
   &__wrapper {
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
-
-    justify-content: center;
-    padding: 50px 0;
+    justify-content: flex-end;
+    transform: translateX(-20%);
+    @media screen and (min-width: 1040px) {
+      transform: translateX(-25%);
+    }
   }
 
   &__label {
-    flex-basis: 100%;
-    padding: 15px;
+    flex-basis: 60%;
+    padding: 20px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     font-size: 20px;
     color: $second;
@@ -59,5 +66,21 @@
     &:hover {
       border: 2px solid $second;
     }
+  }
+  &__select-client {
+    font-size: 18px;
+    margin-left: 10px;
+    max-width: 50%;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid $second;
+  }
+  &__select-service {
+    font-size: 18px;
+    margin-left: 10px;
+    max-width: 80%;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid $second;
   }
 }
