--- a/style/sass/_panel.scss
+++ b/style/sass/_panel.scss
@@ -1,8 +1,9 @@
 .panel {
   background-color: $primary;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
+
   .hamburger {
     position: absolute;
     transform: translateY(-50%);
@@ -73,5 +74,27 @@
     text-decoration: none;
     color: $primary;
     font-size: 27px;
+  }
+  &__bill-wrapper {
+    width: 50%;
+    background-color: white;
+    padding: 20px 0 50px 0;
+    margin: 20px 10px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    border: 2px solid $second;
+    position: relative;
+  }
+  &__bill-download {
+    text-decoration: none;
+    padding: 5px 10px;
+    background-color: $second;
+    border: none;
+    position: absolute;
+    bottom: 10px;
+    color: white;
+    transform: translateX(-50%);
   }
 }
