Get data from database to create pdf file

--- a/style/css/pdf.css
+++ b/style/css/pdf.css
@@ -1,4 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 h1 {
-  color: #adc;
+  margin-top: -10px;
 }
 /*# sourceMappingURL=pdf.css.map */
